Removed <pre> tag

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <h1><u>Projects</u></h1>
     <h3><u>Platform:AWS</u></h3>
     <h2>Problem Title: Deploy a ROS on Cloud</h2>
-    <p><i><pre>-ROS (Robot Operating System) on Cloud will allow the developers to run their robotic simulations and do more implementation.</pre></i></p>
+    <p><i>-ROS (Robot Operating System) on Cloud will allow the developers to run their robotic simulations and do more implementation.</i></p>
     <button style="background-color:lightgreen;" class="favorite styled"
             type="button"><b><i><a target="_blank" href="https://drive.google.com/file/d/1eKCeB3yE1qGuDeVaBk9N4PFMTlFFjySR/view?usp=sharing">View Project</a></i></b></button>
 <hr>
