--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
     <!-- Contact details -->
     <h1><u>Contact details:</u></h1>
     <p><pre>
-        *E-mail: <a target="_blank" href="https://mail.google.com/">impkushwaha30@gmail.com</a>
+        *E-mail:<a target="_blank" href="mailto:impkushwaha30@gmail.com">impkushwaha30@gmail.com</a>
         *Linkedin: <a target="_blank" href="http://surl.li/celey">Click here</a>
         *Github: <a target="_blank" href="https://github.com/PRIYANSHU-CODES">Click here</a>
         *Instagram:<a target="_blank" href="https://instagram.com/_priyanshu.kushwaha_?igshid=YzgyMTM2MGM=">_priyanshu.kushwaha_</a>
-        *Mobile.no: 7232948831
+        *Mobile.no: <a href="tel:+91 7329488312">Call me</a>
     </pre></p>
     <hr>
 
