Added Scroll Behavior  and Bookmark

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
             border: 1px solid black;
             border-collapse: collapse;
         }
+        html{
+            scroll-behavior:smooth;
+        }
     </style>
 </head>
 <body style="background-color:powderblue;">
@@ -23,6 +26,7 @@
     <br/>
     <button class="favorite styled"
             type="button" style="background-color:lightgreen;"><b><i><a target="_blank" href="https://priyanshu.devfolio.io/">Hire me!</a></i></b></button>
+            <a href="#Contact">Contact me</a>
             <hr>
             <!-- About me -->
             <h2>About me</h2>
@@ -113,8 +117,9 @@
             <td><a target="_blank" href="https://drive.google.com/file/d/1LPC04PRJgFy2GQzjiTzMFMNqGvl-vdSC/view?usp=share_link">View</a></td>
         </tr>
     </table>
+    <hr>
     <!-- Contact details -->
-    <h1><u>Contact details:</u></h1>
+    <h1 id="Contact"><u>Contact details:</u></h1>
     <p><pre>
         *E-mail:<a target="_blank" href="mailto:impkushwaha30@gmail.com">impkushwaha30@gmail.com</a>
         *Linkedin: <a target="_blank" href="http://surl.li/celey">Click here</a>
